<resources>
    <string name="app_name" translatable="false">ToDoApp</string>
    <string name="facebook_application_id" translatable="false">345618806781851</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb345618806781851</string>
    <string name="web_client_id" translatable="false">AIzaSyCYLNzhy3eBnU2zDI6L1keb-uL5PQkk_Fg</string>

    <string name="login_with_facebook">Continue with Facebook</string>
    <string name="login_with_google">Continue with Google</string>
    <string name="login_with_email">Login</string>
    <string name="register_with_email">Register</string>
    <string name="enter_email_hint">Enter your email</string>
    <string name="enter_password_hint">Enter your password</string>
    <string name="back_to_login">Back to login</string>
    <string name="continue_without_registration">Continue without registration</string>

    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="no_text">no</string>
    <string name="save_button">Save</string>
    <string name="select">Select</string>
    <string name="pick_day">Pick day</string>
    <string name="empty" />
    <string name="error_while_loading">Error while loading</string>
    <string name="error_while_setting_task_fields">Error while setting task fields</string>
    <string name="error_while_updating_task">Error while updating task</string>
    <string name="error_while_login">Error while login</string>
    <string name="error_invalid_email_or_password">Invalid email or password</string>
    <string name="error_loading_cancel">Loading has been canceled</string>
    <string name="error_empty_field">Field can\'t be empty</string>
    <string name="error_empty_field_goal">Define title and several Key Result for your Goal!</string>
    <string name="error_empty_field_idea">Define title and attach Idea to the Goal!</string>
    <string name="error_empty_field_step">Define title of Step and attach it to Goal and Key Result!</string>
    <string name="error_empty_field_task">Define title of Task!</string>
    <string name="error_adding_key_result">You can\'t add Key Result to Achieved Goal!</string>
    <string name="error_adding_task">You can\'t add Task to Achieved Goal!</string>
    <string name="error_adding_step">You can\'t add Step to Achieved Goal!</string>
    <string name="error_adding_idea">You can\'t add Idea to Achieved Goal!</string>
    <string name="error_delete_goal">Error while deleting Goal</string>
    <string name="error_find_goal">Error while finding Goal</string>
    <string name="error_change_goal_text">Error while changing Goal title</string>

    <string name="error_delete_step">Error while deleting Step</string>
    <string name="error_adding_idea_to_step">You can\'t add Idea to Done Step!</string>
    <string name="error_adding_task_to_step">You can\'t add Task to Done Step!</string>
    <string name="error_find_step">Error while finding Step!</string>
    <string name="error_find_idea">Error while finding Idea!</string>
    <string name="confirm_delete_step">Are you sure you want to delete this Step?</string>

    <string name="error_delete_task">Error while deleting Task</string>
    <string name="error_delete_idea">Error while deleting Idea</string>
    <string name="confirm_delete_task">Are you sure you want to delete this Task?</string>
    <string name="confirm_delete_idea">Are you sure you want to delete this Idea?</string>
    <string name="confirm_delete_goal">Are you sure you want to delete this Goal?</string>

    <string name="title_goals">Goals</string>
    <string name="title_tasks">Tasks</string>
    <string name="title_steps">Steps</string>
    <string name="title_ideas">Ideas</string>

    <string name="title_goal">Goal</string>

    <string name="title_task">Task</string>
    <string name="title_step">Step</string>
    <string name="title_key_result">Key Result</string>
    <string name="title_idea">Idea</string>

    <string name="title_add_task">Add Task</string>
    <string name="title_add_step">Add Step</string>
    <string name="title_add_key_result">Add Key Result</string>
    <string name="title_add_idea">Add Idea</string>
    <string name="title_edit_goal">Edit Goal</string>
    <string name="title_delete_goal">Delete Goal</string>

    <string name="title_edit_step">Edit Step</string>
    <string name="title_delete_step">Delete Step</string>

    <string name="title_edit_task">Edit Task</string>
    <string name="title_delete_task">Delete Task</string>

    <string name="title_edit_idea">Edit Idea</string>
    <string name="title_delete_idea">Delete Idea</string>
    <string name="error_editing_idea">Error while editing Idea</string>

    <string name="add_new_goal_title">Set your new Goal</string>
    <string name="edit_goal_title">Edit your Goal</string>
    <string name="confirm_exit_message">Are you sure you want to log out?</string>
    <string name="add_new_goal_instruction">Add new Goal and specify several Key Results that belong to that Goal</string>
    <string name="specify_key_results">Specify several Key Results\nthat belong to the Goal</string>
    <string name="add_key_results">Add Key Results to the Goal</string>
    <string name="add_key_result">Specify Key Result</string>
    <string name="key_results">Key results of the Goal:</string>
    <string name="enter_goal_hint">Name your Goal</string>
    <string name="all_goals_text">All Goals</string>
    <string name="all_steps_text">All Steps</string>
    <string name="all_ideas_text">All Ideas</string>

    <string name="add_new_task_title">Add new Task</string>
    <string name="edit_task_title">Edit your Task</string>
    <string name="enter_task_hint">Name Task</string>
    <string name="task_attach_to_goal_text">Task is attached to Goal:</string>
    <string name="select_goal_text">Select the Goal</string>
    <string name="task_attach_to_key_result_text">Task is attached to Key Result</string>
    <string name="select_key_result_text">Select the Key Result</string>
    <string name="attach_to_step_text">Task is attached to Step</string>
    <string name="select_step_text">Select the Step</string>
    <string name="scheduled_task_text">Scheduled Task</string>
    <string name="set_finish_time_task_text">Set deadline for the Task</string>
    <string name="repeat_text">Repeat:</string>
    <string name="daily_text">daily</string>
    <string name="weekly_text">weekly</string>
    <string name="monthly_text">monthly</string>

    <string name="deadline_text">Deadline:</string>
    <string name="start_text">Start:</string>
    <string name="status_text">Status:</string>
    <string name="scheduled_text">Scheduled:</string>
    <string name="status_done">Done</string>
    <string name="status_in_progress">In progress</string>
    <string name="not_specified">Not specified</string>
    <string name="attach_to">Attached to:</string>
    <string name="attached_tasks">Attached tasks:</string>
    <string name="attached_ideas">Attached ideas:</string>
    <string name="mark_as_done_text">Mark as Done</string>
    <string name="mark_goal_done_text">Mark the Goal is Achieved</string>

    <string name="add_new_step_title">Add new Step</string>
    <string name="edit_step_title">Edit your Step</string>
    <string name="enter_step_hint">Name Step</string>
    <string name="step_attach_to_goal_text">Step is attached to Goal:</string>
    <string name="step_attach_to_key_result_text">Step is attached to Key Result:</string>

    <string name="add_new_idea_title">Add new Idea</string>
    <string name="enter_idea_hint">Describe your Idea</string>
    <string name="idea_attach_to_goal_text">Idea is attached to Goal:</string>
    <string name="idea_attach_to_key_result_text">Idea is attached to Key Result:</string>
    <string name="attach_to_key_result_text">Attach Step to Key Result:</string>
    <string name="idea_attach_to_step_text">Idea is attached to Step:</string>
    <string name="my_idea">My Idea</string>
    <string name="edit_idea_title">Edit your Idea</string>

    <string name="convert_idea_into_step">convert idea into step</string>
    <string name="convert_idea_into_task">Convert idea into task</string>

    <string name="sort_by">Sort task by</string>
    <string name="sort_by_name">name</string>
    <string name="sort_by_start_date">start date</string>
    <string name="sort_by_finish_date">finish date</string>

    <string name="filter_today">today</string>
    <string name="filter_today_title">Tasks that should be done today</string>
    <string name="filter_tomorrow">tomorrow</string>
    <string name="filter_tomorrow_title">Tasks that should be done tomorrow</string>
    <string name="filter_this_week">this week</string>
    <string name="filter_this_week_title">Tasks that should be done this week</string>
    <string name="filter_next_week">next week</string>
    <string name="filter_next_week_title">Tasks that should be done next week</string>
    <string name="filter_later">later</string>
    <string name="filter_later_title">Tasks that should be done later</string>
    <string name="filter_someday">someday</string>
    <string name="filter_someday_title">Tasks that should be done someday</string>
    <string name="filter_done">Show Done Tasks</string>
    <string name="filter_done_title">Done tasks</string>
    <string name="filter_all">Show all Tasks</string>
    <string name="filter_all_title">All tasks</string>
    <string name="filter_by">Show Tasks that should be done</string>
    <string name="select_item">Select item</string>
</resources>