<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="by.aermakova.todoapp.ui.dialog.convertIdea.ConvertIdeaIntoTaskViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_small"
        tools:context=".ui.goal.addNew.AddGoalFragment">

        <TextView
            android:id="@+id/title"
            style="@style/TextAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/convert_idea_into_task"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/attach_to_key_result_text"
            style="@style/TextInstructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/attach_to_key_result_text"
            android:textAlignment="textStart"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:visible="@{viewModel.keyResultIsVisible}"
            tools:visibility="visible" />

        <Spinner
            android:id="@+id/select_key_result_spinner"
            style="@style/SpinnerTheme"
            app:addSelectedItem="@{viewModel.keyResultSelectUseCase.selectedKeyResult}"
            app:addSpinnerAdapter="@{viewModel.keyResultSelectUseCase.keyResultsList}"
            app:addTitle="@{@string/select_key_result_text}"
            app:disposable="@{viewModel.disposable}"
            app:itemSelectedListener="@{viewModel.keyResultSelected}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/attach_to_key_result_text"
            app:visible="@{viewModel.keyResultIsVisible}" />

        <TextView
            android:id="@+id/scheduled_task_text"
            style="@style/TextInstructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/scheduled_task_text"
            android:textAlignment="textStart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/select_key_result_spinner" />

        <ToggleButton
            android:id="@+id/scheduled_task_toggle"
            android:layout_width="@dimen/toggle_size"
            android:layout_height="@dimen/toggle_size"
            android:layout_marginEnd="@dimen/margin_normal"
            android:background="@drawable/done_check"
            android:src="@drawable/done_check"
            android:text="@string/empty"
            android:textOff="@string/empty"
            android:textOn="@string/empty"
            app:checkedListener="@{viewModel.createTaskUseCase.scheduledTask}"
            app:layout_constraintBaseline_toBaselineOf="@id/scheduled_task_text"
            app:layout_constraintEnd_toEndOf="parent"
            tools:checked="true" />

        <LinearLayout
            android:id="@+id/repeated_interval_selection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/scheduled_task_toggle"
            app:visible="@{viewModel.createTaskUseCase.scheduledTask}"
            tools:visibility="visible">

            <TextView
                android:id="@+id/repeated_text"
                style="@style/TextInstructions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_normal"
                android:text="@string/repeat_text"
                android:textAlignment="textStart" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkedButton="@id/daily_radio_button"
                android:orientation="horizontal"
                app:intervalListener="@{viewModel.createTaskUseCase.taskInterval}">

                <RadioButton
                    android:id="@+id/daily_radio_button"
                    style="@style/CustomRadioButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_small"
                    android:text="@string/daily_text" />

                <RadioButton
                    android:id="@+id/weekly_radio_button"
                    style="@style/CustomRadioButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_small"
                    android:text="@string/weekly_text" />

                <RadioButton
                    android:id="@+id/monthly_radio_button"
                    style="@style/CustomRadioButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_small"
                    android:text="@string/monthly_text" />
            </RadioGroup>
        </LinearLayout>

        <TextView
            android:id="@+id/set_finish_time_task_text"
            style="@style/TextInstructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/set_finish_time_task_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/repeated_interval_selection" />

        <ToggleButton
            android:id="@+id/task_with_deadline_toggle"
            android:layout_width="@dimen/toggle_size"
            android:layout_height="@dimen/toggle_size"
            android:layout_marginEnd="@dimen/margin_normal"
            android:background="@drawable/done_check"
            android:src="@drawable/done_check"
            android:text="@string/empty"
            android:textOff="@string/empty"
            android:textOn="@string/empty"
            app:checkedListener="@{viewModel.createTaskUseCase.deadlinedTask}"
            app:layout_constraintBaseline_toBaselineOf="@id/set_finish_time_task_text"
            app:layout_constraintEnd_toEndOf="parent" />

        <LinearLayout
            android:id="@+id/deadline_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:gravity="center_vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/task_with_deadline_toggle"
            app:onClick="@{viewModel.createTaskUseCase.pickFinishDay}"
            app:visible="@{viewModel.createTaskUseCase.deadlinedTask}">

            <ImageButton
                android:id="@+id/set_deadline_button"
                android:layout_width="@dimen/image_button_size"
                android:layout_height="@dimen/image_button_size"
                android:background="@drawable/ic_baseline_calendar_today_24"
                android:backgroundTint="@color/color_scheme_mantle"
                android:elevation="@dimen/elevation_button"
                android:stateListAnimator="@drawable/lift_on_touch"
                app:onClick="@{viewModel.createTaskUseCase.pickFinishDay}" />

            <TextView
                android:id="@+id/deadline_title"
                style="@style/TextRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                app:convertLongToDate="@{viewModel.createTaskUseCase.taskFinishTime}"
                tools:text="@string/pick_day" />
        </LinearLayout>

        <Button
            android:id="@+id/save_button"
            style="@style/AccentButtonStyle"
            android:layout_width="@dimen/button_width_small"
            android:layout_margin="@dimen/margin_normal"
            android:elevation="@dimen/elevation_button"
            android:text="@string/save_button"
            app:layout_constraintBottom_toBottomOf="@id/cancel_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/cancel_button"
            app:onClick="@{viewModel.saveTask}" />

        <Button
            android:id="@+id/cancel_button"
            style="@style/RegularButtonStyle"
            android:layout_width="@dimen/button_width_small"
            android:layout_margin="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_normal"
            android:elevation="@dimen/elevation_button"
            android:text="@string/cancel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/deadline_layout"
            app:onClick="@{viewModel.cancel}" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>