<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="by.aermakova.todoapp.ui.task.addNew.AddTaskViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.goal.addNew.AddGoalFragment">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:elevation="@dimen/elevation_button"
            app:backgroundTint="@color/color_blue"
            app:fabSize="mini"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:onClick="@{viewModel.popBack}"
            app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

        <TextView
            android:id="@+id/title"
            style="@style/TextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_new_task_title"
            app:layout_constraintBottom_toBottomOf="@+id/fab"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/fab" />


        <TextView
            android:id="@+id/scheduled_task_text"
            style="@style/TextInstructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/scheduled_task_text"
            android:textAlignment="textStart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <ToggleButton
            android:id="@+id/scheduled_task_toggle"
            android:layout_width="@dimen/toggle_size"
            android:layout_height="@dimen/toggle_size"
            android:layout_marginEnd="@dimen/margin_normal"
            android:background="@drawable/done_check"
            android:src="@drawable/done_check"
            android:text="@string/empty"
            android:textOff="@string/empty"
            android:textOn="@string/empty"
            app:checkedListener="@{viewModel.scheduledTask}"
            app:layout_constraintBaseline_toBaselineOf="@id/scheduled_task_text"
            app:layout_constraintEnd_toEndOf="parent"
            tools:checked="true" />

        <LinearLayout
            android:id="@+id/repeated_interval_selection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/scheduled_task_toggle"
            app:visible="@{viewModel.scheduledTask}"
            tools:visibility="visible">

            <TextView
                android:id="@+id/repeated_text"
                style="@style/TextInstructions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_normal"
                android:text="@string/repeat_text"
                android:textAlignment="textStart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/step_switcher" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkedButton="@id/daily_radio_button"
                android:orientation="horizontal"
                app:intervalListener="@{viewModel.taskInterval}">

                <RadioButton
                    android:id="@+id/daily_radio_button"
                    style="@style/CustomRadioButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_small"
                    android:text="@string/daily_text" />

                <RadioButton
                    android:id="@+id/weekly_radio_button"
                    style="@style/CustomRadioButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_small"
                    android:text="@string/weekly_text" />

                <RadioButton
                    android:id="@+id/monthly_radio_button"
                    style="@style/CustomRadioButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_small"
                    android:text="@string/monthly_text" />
            </RadioGroup>

        </LinearLayout>

        <TextView
            android:id="@+id/set_finish_time_task_text"
            style="@style/TextInstructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/set_finish_time_task_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/repeated_interval_selection" />

        <ToggleButton
            android:id="@+id/task_with_deadline_toggle"
            android:layout_width="@dimen/toggle_size"
            android:layout_height="@dimen/toggle_size"
            android:layout_marginEnd="@dimen/margin_normal"
            android:background="@drawable/done_check"
            android:src="@drawable/done_check"
            android:text="@string/empty"
            android:textOff="@string/empty"
            android:textOn="@string/empty"
            app:checkedListener="@{viewModel.deadlinedTask}"
            app:layout_constraintBaseline_toBaselineOf="@id/set_finish_time_task_text"
            app:layout_constraintEnd_toEndOf="parent" />

        <ViewSwitcher
            android:id="@+id/deadline_switcher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_small"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/task_with_deadline_toggle"
            app:showView="@{viewModel.finishDateIsSelected}"
            app:visible="@{viewModel.deadlinedTask}"
            tools:visibility="visible">

            <Button
                android:id="@+id/set_deadline_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/select_button_bg"
                android:elevation="@dimen/elevation_button"
                android:text="@string/pick_day"
                android:textColor="@color/color_grey_light"
                app:onClick="@{viewModel.pickFinishDay}" />

            <TextView
                android:id="@+id/deadline_title"
                style="@style/TextRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewModel.finishDateText}"
                tools:text="15.12.2020" />
        </ViewSwitcher>

        <Button
            android:id="@+id/save_button"
            style="@style/CustomButtonStyle"
            android:layout_marginTop="@dimen/margin_normal"
            android:elevation="@dimen/elevation_button"
            android:text="@string/save_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/deadline_switcher"
            app:onClick="@{viewModel.saveTask}" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>