<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="by.aermakova.todoapp.ui.dialog.confirm.ConfirmDialogViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_normal"
        tools:context=".ui.goal.addNew.AddGoalFragment">

        <TextView
            android:id="@+id/confirm_text"
            style="@style/TextInstructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.message}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/confirm_exit_message" />

        <Button
            android:id="@+id/save_button"
            style="@style/AccentButtonStyle"
            android:layout_width="@dimen/button_width_small"
            android:layout_margin="@dimen/margin_normal"
            android:elevation="@dimen/elevation_button"
            android:text="@string/ok"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/confirm_text"
            app:onClick="@{viewModel.ok}" />

        <Button
            android:id="@+id/cancel_button"
            style="@style/RegularButtonStyle"
            android:layout_width="@dimen/button_width_small"
            android:layout_margin="@dimen/margin_normal"
            android:elevation="@dimen/elevation_button"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="@id/save_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/save_button"
            app:onClick="@{viewModel.cancel}" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>