<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="by.aermakova.todoapp.ui.dialog.addItem.AddItemDialogViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_white"
        android:backgroundTint="@color/color_white"
        android:padding="@dimen/margin_normal"
        app:disposable="@{viewModel.disposable}"
        app:show_errors="@{viewModel.status}"
        tools:context=".ui.goal.addNew.AddGoalFragment">

        <TextView
            android:id="@+id/confirm_text"
            style="@style/TextInstructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.title}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/select_key_result_text" />

        <EditText
            android:id="@+id/dialog_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLines="5"
            android:theme="@style/CustomEditTextStyle"
            app:layout_constraintEnd_toEndOf="@id/save_button"
            app:layout_constraintStart_toStartOf="@id/cancel_button"
            app:layout_constraintTop_toBottomOf="@+id/confirm_text"
            app:tempTitle="@{viewModel.tempItemTitle}" />

        <Button
            android:id="@+id/save_button"
            style="@style/AccentButtonStyle"
            android:layout_margin="@dimen/margin_normal"
            android:layout_width="@dimen/button_width_small"
            android:elevation="@dimen/elevation_button"
            android:text="@string/save_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dialog_edit_text"
            app:onClick="@{viewModel.saveItem}" />

        <Button
            android:id="@+id/cancel_button"
            style="@style/RegularButtonStyle"
            android:elevation="@dimen/elevation_button"
            android:layout_margin="@dimen/margin_normal"
            android:layout_width="@dimen/button_width_small"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="@id/save_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/save_button"
            app:onClick="@{viewModel.cancel}" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>